--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="descargar_guias">Descargar Guias</string>
     <string name="seleccionar_archivo">Seleccionar archivo</string>
     <string name="archivos_seleccionados">Archivos seleccionados</string>
+    <string name="sistemas_e_informatica">Sistemas e Informatica</string>
 </resources>
